--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="nav-container">
             <nav>
                 <a href="#">
-                    <img src="imgs/hdchostlogo.png" alt="icone-fodase">
+                    <img src="imgs/hdchostlogo.png" alt="icone-fodase" class="logo">
                 </a>
                 <ul class="navbar-items">
                     <li><a href="#">Home</a></li>
@@ -36,29 +36,72 @@
             <li>
                 <i class="fas fa-shield-alt"></i>
                 <h3>Segurança</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus voluptatum ab pariatur ut
-                    totam quibusdam saepe expedita quaerat, nam doloremque incidunt, obcaecati et excepturi voluptatibus 
-                    exercitationem animi fuga nulla aliquam?</p>
+                <p>Proteção contra mal-olhado, macumba e outras coisas e Lorem ipsum dolor sit amet 
+                    consectetur adipisicing elit. Voluptas molestias dolorum cumque, 
+                    placeat recusandae earum? Odit eos quaerat totam nam possimus fugiat ab consequatur obcaecati </p>
             </li>
 
             <li>
                 <i class="fas fa-comments"></i>
                 <h3>Amarração</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus voluptatum ab pariatur ut
-                     totam quibusdam saepe expedita quaerat, nam doloremque incidunt, obcaecati et excepturi voluptatibus 
-                     exercitationem animi fuga nulla aliquam?</p>
+                <p>Conquiste seu amor e fodase Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit enim quisquam sint tenetur, minus facilis 
+                    error numquam odio dolorum quam accusantium repellat repellendus quasi </p>
             </li>
 
             <li>
-                <h3>Prosperidade</h3>
                 <i class="fas fa-rocket"></i>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus voluptatum ab pariatur ut
-                    totam quibusdam saepe expedita quaerat, nam doloremque incidunt, obcaecati et excepturi voluptatibus 
-                    exercitationem animi fuga nulla aliquam?</p>
+                <h3>Prosperidade</h3>
+                <p>Faça uma macumbinha e fique milionario Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est aliquam adipisci,
+                     autem odio facilis eaque impedit quo possimus explicabo ducimus consequatur iste. Deserunt magnam maxime </p>
             </li>
         </ul>
     </section>
+    <!-- Segunda seção, Preços e a pqp -->
+    <section>
+        <h2>Planos e Preços</h2>
+        <p>Selecione e fodase</p>
+        <div class="plan-container">
+            <div class="plan">
+                <ul>
+                    <li class="plan-price">15$ por mês</li>
+                    <li class="plan-name">mensal</li>
+                    <li>fodase</li>
+                    <li>fodase</li>
+                    <li>fodase</li>
+                    <li class="select-plan-btn">Saber mais</li>
+                </ul>
+            </div>
+
+            <div class="plan">
+                <ul>
+                    <li class="plan-price">8$ por mês</li>
+                    <li class="plan-name">trimestral</li>
+                    <li>fodase</li>
+                    <li>fodase</li>
+                    <li>fodase</li>
+                    <li class="select-plan-btn">Saber mais</li>
+                </ul>
+            </div>
+
+            <div class="plan">
+                <ul>
+                    <li class="plan-price">5$ por mês</li>
+                    <li class="plan-name">anual</li>
+                    <li>fodase</li>
+                    <li>fodase</li>
+                    <li>fodase</li>
+                    <li class="select-plan-btn">Saber mais</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section class="domain">
+        
+    </section>
 </main>
+<footer>
+
+</footer>
 
 </div>
 </body>
