--- a/index.html
+++ b/index.html
@@ -95,12 +95,33 @@
             </div>
         </div>
     </section>
+
+    <!-- Seleção do sla oq -->
+
     <section class="domain">
-        
+        <h2>Qual o domínio que você deseja?</h2>
+        <p>Digite aqui o domínio desejado</p>
+            <form>
+                <input type="text" name="domain" id="domain" placeholder="Digite o domínio"/>
+                <input type="submit" value="Procurar"/>
+            </form>
+    </section>
+
+    <!-- Última seção -->
+
+    <section class="contact-container">
+        <h2>Contate-nos</h2>
+        <p>Envie uma mensagem e fodase</p>
+        <form >
+            <input type="text" name="nome" id="nome" placeholder="Insira seu nome">
+            <input type="email" name="email" id="email" placeholder="Insira seu Email">
+            <textarea name="mensage" id="mensage" placeholder="Insira sua mensagem"></textarea>
+            <button type="submit">Enviar</button>
+        </form>
     </section>
 </main>
 <footer>
-
+    <p>Fodase</p>
 </footer>
 
 </div>
