--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsivex</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
     crossorigin="anonymous"
     referrerpolicy="no-referrer"/>
+    <link rel="icon" href="imgs/hdchostlogo.png" type="image/png">
 </head>
 <body>
 <div class="container">
@@ -19,39 +21,39 @@
                     <img src="imgs/hdchostlogo.png" alt="icone-fodase" class="logo">
                 </a>
                 <ul class="navbar-items">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Contato</a></li>
-                    <li><a href="#">Preços</a></li>
-                    <li><a href="#" class="default-btn">Fodase</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#contatofodase">Contato</a></li>
+                    <li><a href="#plan">Preços</a></li>
+                    <li><a href="pages/secondpage.html" class="default-btn">Sla</a></li>
                 </ul>
             </nav>
         </div>
 <main>
         <div class="banner">
-            <h1>Zé Pilintra services</h1>
+            <h1>Qlqr coisa services</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </div>
-    <section class="services-container">
+    <section class="services-container" id="home">
         <ul>
             <li>
                 <i class="fas fa-shield-alt"></i>
-                <h3>Segurança</h3>
-                <p>Proteção contra mal-olhado, macumba e outras coisas e Lorem ipsum dolor sit amet 
+                <h3>No more ideias</h3>
+                <p>Lorem ipsum dolor sit amet orem ipsum dolor sit ametorem ipsum dolor sit amet
                     consectetur adipisicing elit. Voluptas molestias dolorum cumque, 
                     placeat recusandae earum? Odit eos quaerat totam nam possimus fugiat ab consequatur obcaecati </p>
             </li>
 
             <li>
                 <i class="fas fa-comments"></i>
-                <h3>Amarração</h3>
-                <p>Conquiste seu amor e fodase Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit enim quisquam sint tenetur, minus facilis 
+                <h3>Qualquer coisa</h3>
+                <p> dolorum quam accusantium repell Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit enim quisquam sint tenetur, minus facilis 
                     error numquam odio dolorum quam accusantium repellat repellendus quasi </p>
             </li>
 
             <li>
                 <i class="fas fa-rocket"></i>
-                <h3>Prosperidade</h3>
-                <p>Faça uma macumbinha e fique milionario Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est aliquam adipisci,
+                <h3>Sei lá</h3>
+                <p> dolorum quam accusantium repell orem ipsum dolor, sit amet consectetur adipisicing elit. Est aliquam adipisci,
                      autem odio facilis eaque impedit quo possimus explicabo ducimus consequatur iste. Deserunt magnam maxime </p>
             </li>
         </ul>
@@ -59,38 +61,38 @@
     <!-- Segunda seção, Preços e a pqp -->
     <section>
         <h2>Planos e Preços</h2>
-        <p>Selecione e fodase</p>
+        <p>Selecione</p>
         <div class="plan-container">
-            <div class="plan">
+            <div class="plan" id="plan">
                 <ul>
-                    <li class="plan-price">15$ por mês</li>
+                    <li class="plan-price">15$</li>
                     <li class="plan-name">mensal</li>
-                    <li>fodase</li>
-                    <li>fodase</li>
-                    <li>fodase</li>
-                    <li class="select-plan-btn">Saber mais</li>
+                    <li>Blá Blá Blá</li>
+                    <li>Blá Blá Blá</li>
+                    <li>Blá Blá Blá</li>
+                    <li class="select-plan-btn"><span>Saber mais</span></li>
                 </ul>
             </div>
 
             <div class="plan">
                 <ul>
-                    <li class="plan-price">8$ por mês</li>
+                    <li class="plan-price">8$</li>
                     <li class="plan-name">trimestral</li>
-                    <li>fodase</li>
-                    <li>fodase</li>
-                    <li>fodase</li>
-                    <li class="select-plan-btn">Saber mais</li>
+                    <li>Blá Blá Blá</li>
+                    <li>Blá Blá Blá</li>
+                    <li>Blá Blá Blá</li>
+                    <li class="select-plan-btn"><span>Saber mais</span></li>
                 </ul>
             </div>
 
             <div class="plan">
                 <ul>
-                    <li class="plan-price">5$ por mês</li>
+                    <li class="plan-price">5$</li>
                     <li class="plan-name">anual</li>
-                    <li>fodase</li>
-                    <li>fodase</li>
-                    <li>fodase</li>
-                    <li class="select-plan-btn">Saber mais</li>
+                    <li>Blá Blá Blá</li>
+                    <li>Blá Blá Blá</li>
+                    <li>Blá Blá Blá</li>
+                    <li class="select-plan-btn"><span>Saber mais</span></li>
                 </ul>
             </div>
         </div>
@@ -99,31 +101,30 @@
     <!-- Seleção do sla oq -->
 
     <section class="domain">
-        <h2>Qual o domínio que você deseja?</h2>
+        <h2>Qual o domínio você deseja?</h2>
         <p>Digite aqui o domínio desejado</p>
             <form>
                 <input type="text" name="domain" id="domain" placeholder="Digite o domínio"/>
-                <input type="submit" value="Procurar"/>
+                <input type="submit" value="Procurar"/ class="procurar">
             </form>
     </section>
 
     <!-- Última seção -->
 
     <section class="contact-container">
-        <h2>Contate-nos</h2>
-        <p>Envie uma mensagem e fodase</p>
+        <h2 id="contatofodase">Contate-nos</h2>
+        <p>Envie-nos uma mensagem</p>
         <form >
             <input type="text" name="nome" id="nome" placeholder="Insira seu nome">
             <input type="email" name="email" id="email" placeholder="Insira seu Email">
             <textarea name="mensage" id="mensage" placeholder="Insira sua mensagem"></textarea>
             <button type="submit">Enviar</button>
         </form>
+        <footer>
+            <p>Formação Front-End</p>
+        </footer>
     </section>
 </main>
-<footer>
-    <p>Fodase</p>
-</footer>
-
 </div>
 </body>
 </html>
